--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,9 @@ span {
 #list-container li.checked .fa-check {
   display: block;
 }
+
+#list-container li .last {
+    color: #757575;
+    position: absolute;
+    right: 18px;
+}
